# azure-pim-web

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pim_web/: main.py  models.py  service.py
src/pim_web/static/: index.html
tests/: test_smoke.py
