[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-pim-web"
dynamic = ["version"]
description = "Browser UI for Azure PIM group activation and approval"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Wessel van der Linden", email = "wesselvdlinden@gmail.com" },
]
keywords = ["azure", "pim", "privileged-identity-management", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "azure-pim-cli",
]

[project.urls]
Homepage = "https://github.com/TheScriptingGuy/azure-pim-web"
Repository = "https://github.com/TheScriptingGuy/azure-pim-web"
Issues = "https://github.com/TheScriptingGuy/azure-pim-web/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.10",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "types-python-dateutil>=2.9",
]

[project.scripts]
pim-web = "pim_web.main:start"

[tool.hatch.version]
path = "src/pim_web/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pim_web"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["SIM105", "SIM102", "SIM117", "B904"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -p no:anyio"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
